<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:hint="@string/question_title"
        android:textColor="@color/black"
        android:textColorHint="#A1887F"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/answer_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:hint="@string/answer_status"
            android:textColor="@color/black"
            android:textColorHint="#546E7A"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/bookmark_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:hint="@string/bookmark_status"
            android:textColor="@color/black"
            android:textColorHint="#546E7A"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>